tests/int/check_command/snapshots/integration__int__check_command__error_cases__should_error_on_duplicate_allow_cycle.snap
---
source: tests/int/check_command/error_cases.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/cycles
    - check
    - "-c"
    - fixtures/cycles/rules_allow_cycle_dup.toml
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
Error: Invalid rule config (fixtures/cycles/rules_allow_cycle_dup.toml): duplicate allow-cycle [alpha, beta, gamma]
