tests/int/check_command/snapshots/integration__int__check_command__error_cases__should_error_on_overlapping_groups.snap
---
source: tests/int/check_command/error_cases.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/check
    - check
    - "-c"
    - fixtures/check/rules_overlapping_groups.toml
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
Error: Invalid rule config (fixtures/check/rules_overlapping_groups.toml): module 'parser' matches two layer groups ('a' and 'b')
