tests/int/check_command/snapshots/integration__int__check_command__error_cases__should_error_on_unknown_module_in_allow_cycle.snap
---
source: tests/int/check_command/error_cases.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/cycles
    - check
    - "-c"
    - fixtures/cycles/rules_allow_cycle_unknown.toml
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
Error: Rule references unknown module 'alfa' (in rule 'allow-cycle [alfa, alpha]')
