tests/int/check_command/snapshots/integration__int__check_command__error_cases__should_error_on_unknown_module_in_deny.snap
---
source: tests/int/check_command/error_cases.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/check
    - check
    - "-c"
    - fixtures/check/rules_deny_bad_module.toml
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
Error: Rule references unknown module 'clii' (in rule 'deny clii -> web')
